--- a/style2.css
+++ b/style2.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@1,300&amp;display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@1,300&family=Nunito:wght@700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@1,300&family=Nunito:wght@700&display=swap');
   *{
     margin: 0;
     padding: 0;
    }
    body{
-   background-color: #131313;
+    
+   background-color: #ffffff;
    font-family: 'Noto Sans', sans-serif;
    }
    input::-webkit-inner-spin-button,
@@ -16,26 +18,29 @@
     width: 100%;
     height: 50px;
    }
-   .logo {
-    
+   .big{
+    position: relative;
+    left: 7%;
+    max-width: 200px;
    }
-  
    input::placeholder{
     color: rgb(34, 34, 34);
     font-size: 16px;
    }
    .entrada input{
+    background-color: greenyellow;
     display: block;
     position: relative;
     margin: 1px;
     padding: 4px;
-    width: 200px;
+    width: 165px;
     left: 25%;
     font-size: 20px;
     border-radius:15px;
     height:50px;
     border:none;
     color: black;
+    font-family: 'Nunito' , sans-serif;
    }
    .entrada input:hover{
     background-color: #abaaaa;
@@ -51,6 +56,7 @@
     width: 360px;
     border-radius: 10px;
     margin: 20px;
+    
    }
    .entrada_2{
     position: absolute;
@@ -62,17 +68,19 @@
     margin: 20px;
    }
    .entrada_2 input{
+    background-color: greenyellow;
     display: block;
     position: relative;
     margin: 1px;
     padding: 4px;
-    width: 200px;
+    width: 165px;
     left: 25%;
     font-size: 20px;
     border-radius:15px;
     height:50px;
     border:none;
     color: black;
+    font-family: 'Nunito' , sans-serif;
    }
    label{
     position: relative;
@@ -84,17 +92,18 @@
     position: relative;
     margin: 20px;
     width: 320px;
-    height: 90px;
-    left: 25px;
+    height: 50px;
+    left:25px;
     top: -120px;
     cursor: pointer;
     font-size: 15px;
     border-radius: 15px;
     font-size:19px;
     border:none;
-    background-color: rgb(127, 127, 178);
+    background-color: greenyellow;
     transition: background .4s;
     box-shadow: 2px 2px 20px 2px rgb(66, 66, 100);
+    font-family: 'Nunito' , sans-serif;
    }
    button:hover {
        background: rgb(77, 77, 166);
@@ -106,7 +115,7 @@
     left:50%;
     top:13px;
     background-color:#202020;
-    width:380px;
+    width:150px;
     height:100px;
     border-radius:20px;
    }
@@ -160,7 +169,7 @@
     left: 66%;
     top: -66px;
     background-color:#202020;
-    width: 150px;
+    width: 10px;
     height: 100px;
     border-radius: 10px;
    }
@@ -216,14 +225,17 @@
       position: relative;
       margin-bottom: 1px;
       height: 200px;
-      width: 270px;
+      width: 10px;
       top: -120px;
-      left: 120px;
+      left: 156px;
     }
     .button {
       position: fixed;
-      left: 40px;
+      left: 10px;
       top: 50px;
       margin: 20px;
+    }
+    .body {
+      overflow-x: hidden;
     }
      }
