--- a/style2.css
+++ b/style2.css
@@ -18,6 +18,12 @@
     width: 100%;
     height: 50px;
    }
+   .title h1{
+    position: relative;
+    font-family: 'Nonato' , sans-serif;
+    left: 25px;
+    top: 10px;
+   }
    .big{
     position: relative;
     left: 7%;
@@ -28,7 +34,7 @@
     font-size: 16px;
    }
    .entrada input{
-    background-color: greenyellow;
+    background-color: #abaaaa;
     display: block;
     position: relative;
     margin: 1px;
@@ -41,6 +47,7 @@
     border:none;
     color: black;
     font-family: 'Nunito' , sans-serif;
+    box-shadow: 5px 2px 10px black;
    }
    .entrada input:hover{
     background-color: #abaaaa;
@@ -68,7 +75,7 @@
     margin: 20px;
    }
    .entrada_2 input{
-    background-color: greenyellow;
+    background-color: #abaaaa;
     display: block;
     position: relative;
     margin: 1px;
@@ -81,6 +88,7 @@
     border:none;
     color: black;
     font-family: 'Nunito' , sans-serif;
+    box-shadow: 5px 2px 10px black;
    }
    label{
     position: relative;
@@ -100,7 +108,7 @@
     border-radius: 15px;
     font-size:19px;
     border:none;
-    background-color: greenyellow;
+    background-color: rgb(127, 127, 178);
     transition: background .4s;
     box-shadow: 2px 2px 20px 2px rgb(66, 66, 100);
     font-family: 'Nunito' , sans-serif;
@@ -114,10 +122,11 @@
     position:relative;
     left:50%;
     top:13px;
-    background-color:#202020;
+    background-color:#abaaaa;
     width:150px;
     height:100px;
     border-radius:20px;
+    box-shadow: 2px 2px 10px black;
    }
    .situacao p{
     padding:10px;
@@ -144,10 +153,11 @@
     position: relative;
     left: 50%;
     top: 35px;
-    background-color:#202020;
+    background-color:#abaaaa;
     width: 150px;
     height: 100px;
     border-radius: 10px;
+    box-shadow: 2px 2px 10px black;
    }
    .container h1{
     position: relative;
@@ -168,10 +178,11 @@
     position: relative;
     left: 66%;
     top: -66px;
-    background-color:#202020;
+    background-color:#abaaaa;
     width: 10px;
     height: 100px;
     border-radius: 10px;
+    box-shadow: 2px 2px 10px black;
    }
    
    .container_2 p{
