--- a/style3.css
+++ b/style3.css
@@ -5,24 +5,28 @@
     padding: 0;
    }
    body{
-    
-   background-color: #ffffff;
+   background-color: white;
    font-family: 'Noto Sans', sans-serif;
+   max-width: 300px;
    }
+   
    input::-webkit-inner-spin-button,
    input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
-   }
-   .menu {
-    width: 100%;
-    height: 50px;
+    position: relative;
+   
    }
    .title h1{
     position: relative;
     font-family: 'Nonato' , sans-serif;
-    left: 25px;
+    left: 18%;
     top: 10px;
+   }
+   
+   .menu {
+    width: 100%;
+    height: 50px;
    }
    .big{
     position: relative;
@@ -32,19 +36,22 @@
    input::placeholder{
     color: rgb(34, 34, 34);
     font-size: 16px;
+    position: relative;
+    top: -15px;
+    left: 3px;
    }
    .entrada input{
-    background-color: #abaaaa;
     display: block;
     position: relative;
     margin: 1px;
     padding: 4px;
-    width: 165px;
+    width: 200px;
     left: 25%;
     font-size: 20px;
     border-radius:15px;
     height:50px;
     border:none;
+    background-color:#abaaaa;
     color: black;
     font-family: 'Nunito' , sans-serif;
     box-shadow: 5px 2px 10px black;
@@ -75,18 +82,17 @@
     margin: 20px;
    }
    .entrada_2 input{
-    background-color: #abaaaa;
     display: block;
     position: relative;
     margin: 1px;
     padding: 4px;
-    width: 165px;
+    width: 200px;
     left: 25%;
     font-size: 20px;
     border-radius:15px;
     height:50px;
     border:none;
-    color: black;
+    background-color:#abaaaa;
     font-family: 'Nunito' , sans-serif;
     box-shadow: 5px 2px 10px black;
    }
@@ -101,7 +107,7 @@
     margin: 20px;
     width: 320px;
     height: 50px;
-    left:25px;
+    left: 27px;
     top: -120px;
     cursor: pointer;
     font-size: 15px;
@@ -122,7 +128,7 @@
     position:relative;
     left:50%;
     top:13px;
-    background-color:#abaaaa;
+    background-color: #abaaaa;
     width:150px;
     height:100px;
     border-radius:20px;
@@ -148,12 +154,15 @@
      display:none;
      color:green;
    }
-   
+   .bx_2{
+    position: relative;
+    left: 33px;
+   }
    .container{
     position: relative;
     left: 50%;
     top: 35px;
-    background-color:#abaaaa;
+    background-color: #abaaaa;
     width: 150px;
     height: 100px;
     border-radius: 10px;
@@ -168,26 +177,24 @@
    }
    .container p{
     position: relative;
-    
     left: 60px;
     font-size: 40px;
     color: aliceblue;
    }
-   
    .container_2{
-    position: relative;
-    left: 66%;
+    position: absolute;
+    display: flex;
+    align-items: center;
     top: -66px;
-    background-color:#abaaaa;
+    background-color: #abaaaa;
     width: 10px;
     height: 100px;
     border-radius: 10px;
     box-shadow: 2px 2px 10px black;
    }
-   
    .container_2 p{
     position: relative;
-    top: 40px;
+    top: 10px;
     left: 50px;
     font-size: 40px;
     color: aliceblue;
@@ -196,6 +203,7 @@
     position: absolute;
     padding: 5px;
     left: 5px; 
+    top: -1px;
    }
    .boneco {
     position: relative;
@@ -210,24 +218,24 @@
     .container {
       position: relative;
       top: -90px;
-      left: 10px;
+      left: -23px;
     }
     .container_2 {
       position: relative;
       top: -190px;
-      left: 165px;
+      left: 137px;
       width: 240px;
     }
     .situacao {
       position: relative;
       top: -100px;
-      left: 8px;
+      left: -23px;
       width: 399px;
     }
     .entrada {
       position: relative;
       top: 100px;
-      left: -90px;
+      left: -109px;
       margin-bottom: 1px;
       height: 200px;
       width: 270px;
@@ -236,17 +244,15 @@
       position: relative;
       margin-bottom: 1px;
       height: 200px;
-      width: 10px;
+      width: 270px;
       top: -120px;
-      left: 156px;
+      left: 104px;
     }
     .button {
       position: fixed;
-      left: 10px;
+      left: 40px;
       top: 50px;
       margin: 20px;
     }
-    .body {
-      overflow-x: hidden;
-    }
      }
+     
